added YouTube video to public_msg

--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -296,6 +296,10 @@ ul.manage-weekdays {
 	padding: 0.5em 1em;
 	background-color: transparent;
 	color: inherit;
+	border-top: 1px solid transparent;
+	border-right: 1px solid transparent;
+	border-bottom: 1px solid transparent;
+	border-right: 1px solid transparent;
 	&:hover {
 		background-color: rgba(0,0,0,0.2);
 	}
@@ -312,7 +316,8 @@ ul.manage-weekdays {
 		background-color: rgba(32,93,168,0.3);
 	}
 	&.personal {// black personal
-		background-color: rgba(0,0,0,0.2);
+		// background-color: rgba(0,0,0,0.2);
+		border-left: 1px solid yellow;
 	}
 }
 .daily-glance.personal {
