--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -155,6 +155,10 @@ form.admin-email-form {
 	max-width: 560px;
 	font-size: 1em;
 	line-height: 1.5em;
+	.greeting-string {
+		display: inline-block;
+		margin-right: 1em;
+	}
 	label {
 		display: block;
 	}
@@ -163,6 +167,15 @@ form.admin-email-form {
 	    border: 0;
 	    padding: 0.2em;
 	    width: 96%;
+	    max-width: 28em;
+	    margin-bottom: 1em;
+	    display: block;
+	}
+	input[type="text"].greeting {
+		font-size: 1.1em;
+	    border: 0;
+	    padding: 0.2em;
+	    width: 6em;
 	    max-width: 28em;
 	    margin-bottom: 1em;
 	    display: block;
@@ -210,7 +223,13 @@ form.admin-email-form {
 		}
 	}
 }
-
+a.whitey {
+	color: #fff;
+	text-decoration: underline;
+	&:hover {
+		text-decoration: none;
+	}
+}
 .email-everyone-review {
 	display: flex;
 	flex-wrap: nowrap;
@@ -222,6 +241,7 @@ form.admin-email-form {
 	padding: 2em;
 	background-color: #fff;
 	margin-bottom: 1em;
+	box-shadow: 0px 0px 20px 12px rgba(0,0,0,0.9);
 	h3 {
 		margin-bottom: 0.5em;
 		color: #757575;
