--- a/style-expanded.css
+++ b/style-expanded.css
@@ -1706,6 +1706,10 @@ form.admin-email-form {
   font-size: 1em;
   line-height: 1.5em;
 }
+form.admin-email-form .greeting-string {
+  display: inline-block;
+  margin-right: 1em;
+}
 form.admin-email-form label {
   display: block;
 }
@@ -1714,6 +1718,15 @@ form.admin-email-form input[type="text"] {
   border: 0;
   padding: 0.2em;
   width: 96%;
+  max-width: 28em;
+  margin-bottom: 1em;
+  display: block;
+}
+form.admin-email-form input[type="text"].greeting {
+  font-size: 1.1em;
+  border: 0;
+  padding: 0.2em;
+  width: 6em;
   max-width: 28em;
   margin-bottom: 1em;
   display: block;
@@ -1762,6 +1775,14 @@ form.admin-email-form > .update-rt > input[type="submit"].revise-email {
   margin-right: 1em;
 }
 
+a.whitey {
+  color: #fff;
+  text-decoration: underline;
+}
+a.whitey:hover {
+  text-decoration: none;
+}
+
 .email-everyone-review {
   display: -ms-flexbox;
   display: flex;
@@ -1776,6 +1797,7 @@ form.admin-email-form > .update-rt > input[type="submit"].revise-email {
   padding: 2em;
   background-color: #fff;
   margin-bottom: 1em;
+  box-shadow: 0px 0px 20px 12px rgba(0, 0, 0, 0.9);
 }
 .email-everyone-review h3 {
   margin-bottom: 0.5em;
