--- a/components/sass/_manage.scss
+++ b/components/sass/_manage.scss
@@ -223,8 +223,8 @@ form.admin-email-form {
 		}
 	}
 }
-a.whitey {
-	color: #fff;
+a.ytv {
+	color: rgba(150,255,0,1);
 	text-decoration: underline;
 	&:hover {
 		text-decoration: none;
