--- a/components/sass/_footer.scss
+++ b/components/sass/_footer.scss
@@ -8,6 +8,14 @@ footer {
   padding-top: 60px;
   padding-bottom: 80px;
   flex: 1;
+   p.form-note {
+    width: 100%;
+    max-width: 400px;
+    margin: 1em auto;
+    text-align: left;
+    line-height: 1.5em;
+    text-align: justify;
+  } 
   button#toggle-contact-form {
     background: none;
     border: none;
