--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -46,10 +46,6 @@
 		& > p {
 			margin-bottom: 0.5em;
 		}
-		label[for="remember_me"] {
-			margin-bottom: 0.5em;
-			cursor: pointer;
-		}
 		& > input {
 			height: 2.5em;
 			width: 100%;
@@ -58,7 +54,7 @@
 			padding: 0.5em;
 			text-align:center;
 			font-size: 1em;
-			font-family: 'Architects Daughter', Tahoma, Helvetica, sans-serif;
+			font-family: Tahoma, Calbri, Helvetica, sans-serif;
 			background-color: rgba(0,0,0,0.2);
 			background-color: rgba(255,255,255,0.05);
 			// background-color: rgba(52, 78, 230, 0.1);
@@ -88,12 +84,63 @@
 			cursor: pointer;
 			border: 1px solid #fff;
 			transition: all 0.2s ease;
+			margin-top: 0.5em;
 			&:hover {
 				background-color: rgba(0,0,0,0.2);
 			}
 		}
+		& > input.login-pswd {
+			margin-bottom: 0.5em;
+		}
 	}
 }
+
+.rm-wrap {
+	// margin-bottom: 0.75em;
+	cursor: pointer;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	padding: 0.5em 1em;
+	// &:focus,
+	// &:active {
+	// 	outline: none;
+	// 	border: 1px dotted rgba(255,255,255,0.2);
+	// }
+}
+input[name="remember_me"] {
+	display: none;
+}
+
+.aa-rm-out {
+	border: 2px solid #fff;
+	border-radius: 50%;
+	padding: 3px 2px 5px 2px;
+	cursor: pointer;
+	margin-right: 0.5em;
+}
+.aa-rm-in {
+  width: 0; 
+  height: 0; 
+  border-left: 10px solid transparent;
+  border-right: 10px solid transparent;
+  
+  border-bottom: 17.32px solid rgba(255,255,255,1);
+
+  margin-top: -2px;
+}
+.aa-rm-in.checkaroo {
+	border-bottom: 17.32px solid rgba(150,255,0,1);
+}
+.rm-rm {
+	color: #fff;
+}
+.rm-rm.hot {
+	color: rgba(150,255,0,1);
+}
+
+
+
 div.pswd-recovery {
 	padding: 20px;
     background-color: #d4e8da;
@@ -102,7 +149,6 @@ div.pswd-recovery {
     width: 100%;
     border: 1px solid #415b45;	
 }
-
 
 /* Change the white to any color ;) */
 input:-webkit-autofill,
@@ -289,7 +335,7 @@ form#logout-form {
 			padding: 0.5em;
 			text-align:center;
 			font-size: 1em;
-			font-family: 'Architects Daughter', Tahoma, Helvetica, sans-serif;
+			font-family: Tahoma, Calbri, Helvetica, sans-serif;
 		}
 		& > button {
 			padding: 10px 20px;
