--- a/components/sass/_login.scss
+++ b/components/sass/_login.scss
@@ -77,6 +77,53 @@
 				background-color: rgba(255,255,255,0);
 			}
 		}
+
+
+		.showpassword-wrap {
+			margin-bottom: 1em;
+			margin-top: -0.5em;
+			width: 100%;
+			text-align: right;
+			font-size: 0.8em;
+
+
+
+			button#showLoginPass,
+			button#showSignupPass {
+				background-color: transparent;
+				color: #fff;
+				border: none;
+				cursor: pointer;
+				outline: 0;
+				i.far {
+					margin-right: 0.5em;
+				}
+				
+
+			}
+			button#showLoginPass.showPassOn,
+			button#showSignupPass.showPassOn {
+					color: #f5a8a8;
+				}
+
+			input#unhidepass {
+				width: 1em;
+				margin-right: 0.5em;
+			}
+			.unhide-cursor {
+				cursor: pointer;
+			}
+			input#unhidepass {
+				display: none;
+			}
+			.showPswd.showOn {
+				color: green;
+			}
+
+		}
+		input#showConf {
+			margin-bottom: 0.5em;
+		}
 		& > input.submit {
 			font-family: Tahoma, Calbri, sans-serif;
 			background-color: rgba(0,0,0,0.9);
