--- a/components/sass/_footer.scss
+++ b/components/sass/_footer.scss
@@ -140,6 +140,63 @@ footer {
         background: #ccc;
       }     
     }
+
+    input#emailBob {
+      // display: inline-block;
+      float: left;
+      width: 150px;
+      padding: 10px;
+      // margin: 10px 0;
+      text-align: center;
+      // border-radius: 3px;
+      border: 1px solid #233851;
+      background-color: #565656;
+      color: #fff;
+      cursor: pointer;
+      outline: none;
+      transition: all 0.2s ease;
+      &:hover {
+        background-color: #82c33a;
+        color: #fff;
+      }
+      &:active, &:focus {
+        outline: none;
+        outline-style: 0;
+      }     
+    }
+
+    #msg {
+      margin-top: 0.75em;
+      width: 100%;
+      .alert-warning {
+        margin-bottom: 0.5em;
+        border-radius: 5px;
+        padding: 0.75em;
+        font-size: 1em;
+        color: #313131;
+        background-color: #ffdddd;
+        border: 1px solid #ff5a5a;
+      }
+      .alert-success {
+        margin-bottom: 0.5em;
+        border-radius: 5px;
+        padding: 0.75em;
+        font-size: 1em;
+        color: #fff;
+        background-color: #82c33a;
+        border: 1px solid #45661f;
+      }
+    }
+    span {
+      background: rgba(150,255,0,0.1);
+      padding: 1em;
+      border: 1px solid #96ff00;
+    }
+
+
+
+
+
   }
 
   button#confirm {
