--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -220,6 +220,16 @@ li.ctr-day {
 			flex-direction: column;
 			width: 50%;
 			padding: 1em;
+
+
+			#map {
+				width: 96%;
+				height: 180px;
+				margin-bottom: 1em;
+			}
+
+
+
 			p.add-info {
 				text-decoration: underline;
 				font-weight: bold;
