--- a/components/sass/_weekdays.scss
+++ b/components/sass/_weekdays.scss
@@ -220,19 +220,10 @@ li.ctr-day {
 			flex-direction: column;
 			width: 50%;
 			padding: 1em;
-
-
-			#map {
-				width: 96%;
-				height: 180px;
-				margin-bottom: 1em;
-			}
-
-
-
 			p.add-info {
 				text-decoration: underline;
 				font-weight: bold;
+				margin-top: 0.5em;
 				margin-bottom: 0.5em;
 			}
 			ul {
@@ -404,5 +395,7 @@ a.zoom {
   display: inline-block;
   // margin-top: 1em;
   text-decoration: none;
+  width: auto;
+  padding: 0.5em 1em;
 
 }
